--- a/accelerate-buildbot.cabal
+++ b/accelerate-buildbot.cabal
@@ -25,17 +25,17 @@ Executable accelerate-buildbot
   Build-depends:
     base                == 4.*,
     buildbox            == 1.5.*,
-    bytestring          == 0.9.*,
+    bytestring          >= 0.9    && <  0.11,
     bytestring-csv      == 0.1.*,
-    bytestring-lexing   == 0.2.*,
+    bytestring-lexing   >= 0.2    && <  0.5,
     cmdargs             >= 0.6,
-    containers          >= 0.3    && <  0.5,
-    directory           >= 1.0    && <  1.2,
+    containers          >= 0.3    && <  0.6,
+    directory           >= 1.0    && <  1.3,
     filepath            >= 1.1    && <  1.4,
     mtl                 >= 1.1    && <  3.0,
     old-locale          == 1.0.*,
     random              == 1.0.*,
-    unix	            >= 2.4
+    unix                >= 2.4
 
 Source-repository head
   Type:                 git
